Debugging, user can add coffee, access roles applied